k8s/manifests-351df8/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: journee-351df8
  namespace: journee
  labels:
    app: journee-351df8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: journee-351df8
  template:
    metadata:
      labels:
        app: journee-351df8
    spec:
      imagePullSecrets:
        - name: gcr-pull-secret
      containers:
        - name: journee-351df8
          image: gcr.io/my-docker-471807/journee:v5.2.0
          ports:
            - containerPort: 3000
