k8s/manifests-351df8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: journee-351df8
  namespace: journee
spec:
  selector:
    app: journee-351df8
  ports:
    - port: 80
      targetPort: 3000
